Fix modals on iOS

--- a/frontend/src/Components/Modal/Modal.css
+++ b/frontend/src/Components/Modal/Modal.css
@@ -30,12 +30,6 @@
   overflow: hidden !important;
 }
 
-.modalOpenIOS {
-  position: fixed;
-  right: 0;
-  left: 0;
-}
-
 /*
  * Sizes
  */
